[package]
name = "ttl-proxy"
version = "0.1.1"
authors = ["vinoca <vinoca@vinoca.org>"]
description = "a transparent TCP to SOCKSv5 proxy on Linux"
edition = "2018"

[dependencies]
anyhow = "1.0.40"
bytes = "1.0.1"
libc  = "0.2.94"
smol = "1.2.5"
clap = { version = "2.33.3", default-features = false }

[dependencies.socks5]
version = "0.2.2"
git = "https://github.com/vincascm/socks5.git"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
