[package]
name = "ttl-proxy"
version = "0.1.2"
authors = ["vinoca <vinoca@vinoca.org>"]
description = "a transparent TCP to SOCKSv5 proxy on Linux"
edition = "2018"

[dependencies]
anyhow = "1.0.51"
bytes = "1.1.0"
libc  = "0.2.109"
smol = "1.2.5"
clap = { version = "2.34.0", default-features = false }

[dependencies.socks5]
version = "0.3.0"
git = "https://github.com/vincascm/socks5.git"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
