[package]
name = "ttl-proxy"
version = "0.2.0"
authors = ["vinoca <vinoca@vinoca.org>"]
description = "a transparent TCP to SOCKSv5 proxy on Linux"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
libc  = "0.2.180"
smol = "2.0.2"
clap = { version = "4.5.54", default-features = false, features = [ "std", "help", "suggestions", "usage", "derive" ] }

[dependencies.socks5-client]
version = "0.5.0"
git = "https://github.com/vincascm/socks5.git"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
